---
title: User
---
classDiagram
    direction LR

    class UserInterface {
        <<Interface>>
        +getRoles() array
        +getUserIdentifier() string
    }

    class User {
        -string username
        -string email
        -string password
        -bool enabled
        -bool verified
        -Collection~UserProperty~ properties
        +getRoles() array
        +getUserIdentifier() string
        +getUsername() string
        +setUsername(string)
        +getEmail() string
        +setEmail(string)
        +getPassword() string
        +setPassword(string)
        +getUserIdentifier() string
        +isEnabled() bool
        +setEnabled(bool)
        +isVerified() bool
        +setVerified(bool)
        +addProperty(UserProperty)
        +removeProperty(UserProperty)
        +getProperties() Collection~UserProperty~
    }

    class UserProperty {
        -User user
        +getUser() User
        +setUser(User)
    }

    class AbstractProperty {
        <<Abstract>>
    }

    class AbstractEntity {
        <<Abstract>>
    }
    class EntityInterface {
        <<Interface>>
    }

    class TimestampableInterface {
        <<Interface>>
    }

    EntityInterface <|.. AbstractEntity
    AbstractEntity <|-- User
    User ..|> UserInterface
    User "0" --* "*" UserProperty
    AbstractProperty <|-- UserProperty
    TimestampableInterface <|-- User

    click EntityInterface call nodeCallback()
    click AbstractEntity call nodeCallback()
    click AbstractProperty call nodeCallback()
    click TimestampableInterface call nodeCallback()
